# dwg_framework

./: .gitignore  .gitignore.swp  pyproject.toml
notebooks/m_ll_dr/: fileset.txt  fileset_TChiWZ_2018.txt  fileset_TChiWZ_2018_naod.txt  fileset_TChiWZ_2018_naod_small.txt  fileset_TChiWZ_2018_ntuple.txt  fileset_ntuples.txt  gen_filter.py  gen_tagger.py  jet_trigger_mask.py  lep_tagger.py  lep_tagger_UL.py  make_pikl.ipynb  selections.py  skim_event_investigation.ipynb
notebooks/template/: fileset_full.txt  make_pikl.ipynb
notebooks/testing/: fileset.txt  fileset_full.txt  test.ipynb
notes/: particle.ipynb  pathlib.ipynb
notes/sample_files/: fileset.toml  fileset.txt  unpack_TOML.py
src/: default_analysis.py  poster_plots.py
src/plotting/: eff_plots.py  efficiencies.py  histers.py
src/taggers/: gen_tagger.py  lep_tagger.py  lep_tagger_UL.py  lep_tagger_dev.py  vid_unpacked.py
utils/: JetMET_2022C.txt  JetMET_2022D.txt  JetMET_2022E.txt  JetMET_2022F.txt  JetMET_2022G.txt  JetMET_2023C.txt  SMS-TChiWZ_ZToLL_mZMin-0p1_TuneCP5_13TeV-madgraphMLM-pythia8_RunIISummer20UL18NanoAODv9-106X_upgrade2018_realistic_v16_L1v1-v1_NANOAODSIM.txt  TChiWZ_2017_UL.txt  WtoLNu-2Jets_TuneCP5_13p6TeV_amcatnloFXFX-pythia8.txt  make_fileset.py  make_fileset_cern_redirector.py
